--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,19 @@
 on:
-  pull_request:
+  push:
     branches:
       - master
 
 jobs:
-  build_test_job:
-    name: 'Build and test job'
-    runs-on: ${{ matrix.os }}
-    strategy:
-        matrix:
-          os: [windows-latest, ubuntu-latest, macos-latest]
+  build_and_commit:
+    name: Build and commit
+    runs-on: ubuntu-latest
     steps:
+      - name: Checking out repo code
+        uses: actions/checkout@v2
 
-    - name: 'Checking out repo code'
-      uses: actions/checkout@v2
+      - name: Build
+        run: |
+          npm install
+          npm run build
 
-    - name: 'Validate build'
-      run: |
-        npm install
-        npm run build
-
-    - name: 'Run L0 tests'
-      run: |
-        npm run test
+      - uses: stefanzweifel/git-auto-commit-action@b863ae1933cb653a53c021fe36dbb774e1fb9403
